Implement complete, list, and remove task commands
Added and implemented CompleteTaskCommand, ListTasksCommand, and RemoveTaskCommand with full CLI options and logic. Refactored TaskStorage and TaskList for better list/task retrieval and removal, improved file change handling, and added comprehensive tests for new commands. Updated build.gradle for JUnit BOM and test launcher.