@@ -12,17 +12,26 @@ import java.nio.file.Path;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class AddTaskTest {
+    private static CommandLine createCLI(TaskStorage storage) {
+        return new CommandLine(new TaskCommand(), new CommandLine.IFactory() {
+            @Override
+            public <K> K create(Class<K> cls) throws Exception {
+                return cls.getConstructor(TaskStorage.class).newInstance(storage);
+            }
+        });
+    }
+
     @Test
     public void testAddTask() throws IOException {
         Path tempPath = Files.createTempFile("tasklistcli-test", ".json");
-        var storage = new TaskStorage(tempPath);
+        var storage = new TaskStorage(tempPath, false);
         CommandLine cli = createCLI(storage);
         int exitCode = cli.execute("add", "--title", "Buy milk");
 
         assertEquals(0, exitCode);
         assertEquals(1, storage.getTaskLists().size());
         assertEquals(1, storage.getAllTasks().size());
-        assertEquals("Buy milk", storage.getAllTasks().getFirst().getName());
+        assertEquals("Buy milk", storage.getAllTasks().get(0).getName());
 
         Files.deleteIfExists(tempPath);
     }
@@ -30,7 +39,7 @@ public class AddTaskTest {
     @Test
     public void testAddMultipleTasks() throws IOException {
         Path tempPath = Files.createTempFile("tasklistcli-test", ".json");
-        var storage = new TaskStorage(tempPath);
+        var storage = new TaskStorage(tempPath, false);
         var cli = createCLI(storage);
         cli.execute("add", "--title", "Buy milk");
         cli.execute("add", "--title", "Walk the dog");
@@ -45,25 +54,16 @@ public class AddTaskTest {
     @Test
     public void testAddTaskToSpecificList() throws IOException {
         Path tempPath = Files.createTempFile("tasklistcli-test", ".json");
-        var storage = new TaskStorage(tempPath);
+        var storage = new TaskStorage(tempPath, false);
         var cli = createCLI(storage);
         cli.execute("add-list", "--name", "Errands");
         cli.execute("add", "--title", "Buy groceries", "--list", "Errands");
 
         assertEquals(1, storage.getTaskLists().size());
         assertEquals(1, storage.getAllTasks().size());
-        assertEquals("Buy groceries", storage.getAllTasks().getFirst().getName());
-        assertEquals("Errands", storage.getTaskLists().getFirst().getName());
+        assertEquals("Buy groceries", storage.getAllTasks().get(0).getName());
+        assertEquals("Errands", storage.getTaskLists().get(0).getName());
 
         Files.deleteIfExists(tempPath);
-    }
-
-    private static CommandLine createCLI(TaskStorage storage) {
-        return new CommandLine(new TaskCommand(), new CommandLine.IFactory() {
-            @Override
-            public <K> K create(Class<K> cls) throws Exception {
-                return cls.getConstructor(TaskStorage.class).newInstance(storage);
-            }
-        });
     }
 }
